--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
 .App {
   text-align: center;
+  margin-top: 32px
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  height: 300px;
+  width: 200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: relative;
+}
+
+.overlay {
+  top: 0%;
+  padding-top: 60%;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
   color: white;
+  display: none;
+  background-color: #000000a3;
+  margin: auto;
+  position: absolute;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card:hover .overlay {
+  display: block;
 }
